kubernetes-practice/k8s/deployment-redirect.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redirect-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: redirect-server
  template:
    metadata:
      labels:
        app: redirect-server
    spec:
      containers:
      - name: redirect-server-container
        image: redirect_service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
