kubernetes-practice/k8s/service-redirect.yml
kind: Service
apiVersion: v1
metadata:
  name: redirect-server-service
spec:
  selector:
    app: redirect-server
  type: ClusterIP
  ports:
  - name: redirect-server-port
    port: 80
    targetPort: 8080
