kubernetes-practice/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-practice-ingress
  labels:
    app.kubernetes.io/name: kubernetes-practice-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
       paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: main-server-service
              port:
                number: 80
    - http:
        paths:
          - pathType: Prefix
            path: "/api/redirect"
            backend:
              service:
                name: redirect-server-service
                port:
                  number: 80
